--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       rel="stylesheet"
     />
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="./src/style/style.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finance Control</title>
   </head>
