fix: adiciona tela de registro, ajustes no modo escuro, e adicionando imagens svg

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/df-logo-white.png" />
 
+    <!-- STORYSET -->
+    <link href="https://storyset.com/technology" />
+    <link href="https://storyset.com/education" />
+    <link href="https://storyset.com/people" />
+    <link href="https://storyset.com/data" />
+
     <!-- MONTSERRAT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,7 +27,7 @@
     />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./src/style/style.css">
+    <link rel="stylesheet" href="./src/style/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finance Control</title>
   </head>
